...
        }}
      />

      <Tabs.Screen
        name="support-units"
        options={{
          title: "Unidades",
          headerTitle: "Unidades",
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name="business-outline" color={color} label="Unidades" focused={focused} />
          ),
        }}
      />
...
